# wasmcloud-messaging-chatbot

./: .gitignore  Cargo.toml  README.md  build.sh  wasmcloud.toml
.github/workflows/: release.yml
bad-janet/: Cargo.toml  README.md  wadm.yaml  wasmcloud.toml
bad-janet/src/: lib.rs
good-janet/: Cargo.toml  README.md  wadm.yaml  wasmcloud.toml
good-janet/src/: lib.rs
src/: discord.rs  main.rs
