[package]
name = "provider-messaging-discord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
case_insensitive_hashmap = "1.0.0"
futures = "0.3.30"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
serenity = "0.12.1"
tokio = { version = "1.37.0", features = ["full"] }
wasmcloud-provider-sdk = "0.4.0"
wit-bindgen-wrpc = "0.3.7"
